--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "testbot",
   "version": "1.0.0",
-  "description": "",
+  "description": "TestBot Server App",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-	"start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Ai club",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "request": "^2.72.0"
+  }
 }
